@@ -1,3 +1,8 @@
+Fri Jan  1 13:26:21 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/manconv.c (try_iconv): Only handle iconv errors when iconv
+	  returned -1.
+
 Fri Jan  1 11:37:13 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* src/manconv.c (try_iconv): Handle iconv errors when attempting to
